# RustyMakeurpicks

./: Cargo.toml  README.txt  posts.sqlite
entity/src/: post.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs
src/player/: player.rs
